@@ -25,6 +25,10 @@ This document lists the Changes to Bricolage introduced with each release.
 Added a guide on how to profile Mason templates. See
 F<contrib/template_profiling>. [Scott]
 
+=item *
+
+ContribType and Destinations SOAP modules. [Scott]
+
 =back
 
 =head2 Improvements
